tests/error/struct_errors/constructor_too_many_args.err
Error: Too many arguments (at $FILE:11:16)
   | 
 9 | @guppy
10 | def main() -> None:
11 |     MyStruct(1, 2, 3)
   |                 ^^^^ Unexpected arguments (expected 1, got 3)

Note: Function signature is `int -> MyStruct`

Guppy compilation failed due to 1 previous error
